--- a/app/src/main/res/layout/activity_modifica.xml
+++ b/app/src/main/res/layout/activity_modifica.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.a2dam.quicktrade.Modificar">
+    tools:context="com.example.a2dam.quicktrade.modUsuario">
 
     <TextView
         android:id="@+id/textView6"
@@ -38,19 +38,6 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Nombre de usuario" />
-
-            <EditText
-                android:id="@+id/nombreusuariotxt2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
-
         </LinearLayout>
 
         <LinearLayout
@@ -58,34 +45,16 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Correo" />
-
-            <EditText
-                android:id="@+id/correotxt2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Nombre" />
 
             <EditText
                 android:id="@+id/nombretxt2"
+                android:hint="Nombre"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" />
@@ -95,16 +64,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Apellidos" />
 
             <EditText
                 android:id="@+id/apellidostxt2"
+                android:hint="Apellidos"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" />
@@ -115,15 +78,9 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Direccion" />
-
             <EditText
                 android:id="@+id/direcciontxt2"
+                android:hint="Direccion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" />
@@ -142,12 +99,6 @@
                     android:layout_weight="1"
                     android:text="Modificar" />
 
-                <Button
-                    android:id="@+id/buscarusu"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Buscar usuario" />
             </LinearLayout>
 
 
