--- a/app/src/main/res/layout/activity_mos_producto.xml
+++ b/app/src/main/res/layout/activity_mos_producto.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.a2dam.quicktrade.mosProducto">
+    tools:context="com.example.a2dam.quicktrade.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -38,6 +38,18 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/btnFavoritos"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Favoritos" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
