--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.a2dam.quicktrade.Principal">
+    tools:context="com.example.a2dam.quicktrade.MainActivity">
 
     <FrameLayout
         android:id="@+id/content"
