--- a/app/src/main/res/layout/activity_registar.xml
+++ b/app/src/main/res/layout/activity_registar.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.a2dam.quicktrade.RegistrarUsuario">
+    tools:context="com.example.a2dam.quicktrade.MainActivity">
 
     <TextView
         android:id="@+id/textView8"
